# tmp-the-basename

./: .gitignore  README.md  SETUP.sh  bump  pyproject.toml
tests/: test_guarantee_pass.py
tmp_the_basename/: cli.py
