[project]
name = "tmp-the-basename"
version = "0.0.0"
description = "A demo"
readme = "README.md"
authors = [{name = "Bryan Hann"}]
requires-python = ">=3.8"
dependencies = [
    "bumpver>=2023.1129",
    "pytest==8.3.3",
    "click==8.1.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/bryanhann/tmp-the-basename"
Changelog = "https://github.com/bryanhann/tmp-the-basename/releases"
Issues = "https://github.com/bryanhann/tmp-the-basename/issues"
CI = "https://github.com/bryanhann/tmp-the-basename/actions"

[project.scripts]
tmp-the-basename = "tmp_the_basename.cli:cli"

[project.optional-dependencies]
test = ["pytest==8.3.3"]

######################################################################

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"VERSION" = [
    '{version}',

]
"README.md" = [
    'version = {version}',
]

